--- a/01 - Web/pruebas-http/package.json
+++ b/01 - Web/pruebas-http/package.json
@@ -5,6 +5,8 @@
   "author": "",
   "license": "MIT",
   "scripts": {
+    "hola-inge": "echo HOLA INGE!!",
+    "listar": "dir",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
